Updating java version

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -314,9 +314,11 @@ associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCo
 { GRAPH <#{namedGraph}> \
   { \
     ?x_concept a owl:Class . \
+    FILTER ( isIRI( ?x_concept ) ) . \
     ?x_concept ?relationship ?relatedConcept . \
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
+    FILTER ( isIRI( ?x_relatedConcept ) ) . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
@@ -331,11 +333,13 @@ associations.all.ncit=SELECT ?conceptCode ?conceptLabel ?relationshipCode ?relat
 { GRAPH <#{namedGraph}> \
   { \
     ?x_concept a owl:Class . \
+    FILTER ( isIRI( ?x_concept ) ) . \
     ?x_concept #{preferredNameCode} ?conceptLabel . \
     ?x_concept #{codeCode} ?conceptCode . \
     ?x_concept ?x_relationship ?x_relatedConcept . \
     ?x_relationship a owl:AnnotationProperty . \
     ?x_relatedConcept a owl:Class . \
+    FILTER ( isIRI( ?x_relatedConcept ) ) . \
     ?x_relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
     ?x_relatedConcept #{codeCode} ?relatedConceptCode . \
     ?x_relationship #{preferredNameCode} ?relationshipLabel . \
@@ -388,6 +392,7 @@ inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipL
   { \
     { \
       ?relatedConcept a owl:Class . \
+      FILTER ( isIRI( ?x_relatedConcept ) ) . \  
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -514,6 +519,7 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
 	      ?rs a owl:Restriction . \
 	      ?rs owl:onProperty ?relationship . \
 	      ?rs owl:someValuesFrom ?x_concept . \
+          FILTER ( isIRI( ?x_concept ) ) . \
 	      ?x_concept a owl:Class . \
 	      ?x_concept #{codeCode} ?conceptCode . \
 	      FILTER (?conceptCode IN (#{inClause})) . \
@@ -529,6 +535,7 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
 	      ?rs a owl:Restriction . \
 	      ?rs owl:onProperty ?relationship . \
 	      ?rs owl:someValuesFrom ?x_concept . \
+          FILTER ( isIRI( ?x_concept ) ) . \
 	      ?x_concept a owl:Class . \
 	      FILTER (?x_concept IN (#{aboutClause})) . \
 	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
@@ -728,11 +735,13 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
   { \
     { \
       ?x_concept a owl:Class . \
+      FILTER ( isIRI( ?x_concept ) ) . \
       ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
+      FILTER ( isIRI( ?x_relatedConcept ) ) . \
       ?x_concept #{codeCode} ?conceptCode . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
@@ -750,6 +759,7 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
+      FILTER ( isIRI( ?relatedConcept ) ) . \
       ?relatedConcept a owl:Class . \
       ?x_concept #{codeCode} ?conceptCode . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
@@ -817,8 +827,8 @@ hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?ch
         OPTIONAL { ?child #{codeCode} ?childCode } . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } . \
-        FILTER (!isBNode(?parent)) . \
-        FILTER (!isBNode(?child)) \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
       } \
     } \
     UNION \
@@ -834,8 +844,8 @@ hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?ch
         OPTIONAL { ?child #{codeCode} ?childCode } . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } . \
-        FILTER (!isBNode(?parent)) . \
-        FILTER (!isBNode(?child)) \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
       } \
     } \
     UNION \
@@ -851,8 +861,8 @@ hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?ch
         OPTIONAL { ?child #{codeCode} ?childCode } . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } . \
-        FILTER (!isBNode(?parent)) . \
-        FILTER (!isBNode(?child)) \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
       } \
     } \
   } \
@@ -940,8 +950,9 @@ axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
     ?x a owl:Axiom . \
-    ?y a owl:Class . \
     ?x owl:annotatedSource ?y . \
+    FILTER ( isIRI( ?y ) ) . \
+    ?y a owl:Class . \
     ?x #{propertyCode} ?propertyValue . \
     FILTER NOT EXISTS { ?y #{conceptStatusCode} "#{retiredStatusValue}" } \
   } \
@@ -966,7 +977,7 @@ all.concepts.without.code=SELECT ?concept ?conceptCode ?conceptLabel \
         OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
         FILTER NOT EXISTS { ?concept #{codeCode} ?conceptCode } . \
         FILTER NOT EXISTS { ?concept owl:deprecated "true"^^xsd:boolean } . \
-        FILTER (!isBNode(?concept)) \
+        FILTER (!isBlank(?concept)) \
     } \
 } \
 ORDER BY ?x_conceptCode 
