--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -310,7 +310,8 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # Here, keep all the optional clauses at the end otherwise the query times out on NCI dev
-associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+# ?relatedConcept needed in case the code/labels are blank - ?concept too for inverses
+associations.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
     ?x_concept a owl:Class . \
@@ -323,8 +324,8 @@ associations.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCo
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
-    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+    ?concept #{codeCode} ?conceptCode . \
   } \
 }
 
@@ -392,7 +393,7 @@ inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipL
   { \
     { \
       ?relatedConcept a owl:Class . \
-      FILTER ( isIRI( ?x_relatedConcept ) ) . \  
+      FILTER ( isIRI( ?x_relatedConcept ) ) . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -711,17 +712,17 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
-roles.all=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+roles.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x_concept a owl:Class . \
-    ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+    ?concept a owl:Class . \
+    ?concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
     ?rs a owl:Restriction . \
     ?rs owl:onProperty ?relationship . \
     ?rs owl:someValuesFrom ?relatedConcept . \
     ?relatedConcept a owl:Class . \
-    OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
-    ?x_concept #{codeCode} ?conceptCode . \
+    OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
+    ?concept #{codeCode} ?conceptCode . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
