TESTING: fix some sparql queries related to checking wrong IRI

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -319,7 +319,7 @@ associations.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relat
     ?x_concept ?relationship ?relatedConcept . \
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
-    FILTER ( isIRI( ?x_relatedConcept ) ) . \
+    FILTER ( isIRI( ?relatedConcept ) ) . \
     OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
     ?relatedConcept #{codeCode} ?relatedConceptCode . \
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
@@ -337,12 +337,12 @@ associations.all.ncit=SELECT ?conceptCode ?conceptLabel ?relationshipCode ?relat
     FILTER ( isIRI( ?x_concept ) ) . \
     ?x_concept #{preferredNameCode} ?conceptLabel . \
     ?x_concept #{codeCode} ?conceptCode . \
-    ?x_concept ?x_relationship ?x_relatedConcept . \
+    ?x_concept ?x_relationship ?relatedConcept . \
     ?x_relationship a owl:AnnotationProperty . \
-    ?x_relatedConcept a owl:Class . \
-    FILTER ( isIRI( ?x_relatedConcept ) ) . \
-    ?x_relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
-    ?x_relatedConcept #{codeCode} ?relatedConceptCode . \
+    ?relatedConcept a owl:Class . \
+    FILTER ( isIRI( ?relatedConcept ) ) . \
+    ?relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
+    ?relatedConcept #{codeCode} ?relatedConceptCode . \
     ?x_relationship #{preferredNameCode} ?relationshipLabel . \
     ?x_relationship #{codeCode} ?relationshipCode . \
   } \
@@ -393,7 +393,7 @@ inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipL
   { \
     { \
       ?relatedConcept a owl:Class . \
-      FILTER ( isIRI( ?x_relatedConcept ) ) . \
+      FILTER ( isIRI( ?relatedConcept ) ) . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -742,7 +742,7 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
-      FILTER ( isIRI( ?x_relatedConcept ) ) . \
+      FILTER ( isIRI( ?relatedConcept ) ) . \
       ?x_concept #{codeCode} ?conceptCode . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
