Changes to support a 'hierarchyRoles' feature in .json files to describe role codes that should be re-interpreted into the hierarchy

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -730,6 +730,27 @@ roles.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationship
   } \
 }
 
+# Reinterpret certain roles as hierarchical
+# NOTE: requires a relationship label
+roles.hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?child a owl:Class . \
+    ?child (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+    ?rs a owl:Restriction . \
+    ?rs owl:onProperty ?relationship . \
+    ?rs owl:someValuesFrom ?parent . \
+    ?parent a owl:Class . \
+    OPTIONAL { ?child #{preferredNameCode} ?childLabel } . \
+    ?child #{codeCode} ?childCode . \
+    OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
+    ?parent #{codeCode} ?parentCode . \
+    OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+    ?relationship #{codeCode} ?relationshipCode . \
+    FILTER (?relationshipCode IN (#{inClause})) . \
+  } \
+}
+
 # ?concept and ?relatedConcept both must have a code
 roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
