Fix logic to include roles that are not hierarchy roles

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -314,9 +314,10 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 associations.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x_concept a owl:Class . \
-    FILTER ( isIRI( ?x_concept ) ) . \
-    ?x_concept ?relationship ?relatedConcept . \
+    ?concept a owl:Class . \
+    ?concept #{codeCode} ?conceptCode . \
+    FILTER ( isIRI( ?concept ) ) . \
+    ?concept ?relationship ?relatedConcept . \
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     FILTER ( isIRI( ?relatedConcept ) ) . \
@@ -325,7 +326,6 @@ associations.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relat
     OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
     OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
-    ?concept #{codeCode} ?conceptCode . \
   } \
 }
 
