EVSRESTAPI-453, EVSRESTAPI-436, various: fixes for issues in MGED, NPO, DUO, Zebrafish, MouseAnatomy (#260)

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -314,9 +314,9 @@ associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relation
 associations.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x_concept a owl:Class . \
-    FILTER ( isIRI( ?x_concept ) ) . \
-    ?x_concept ?relationship ?relatedConcept . \
+    ?concept a owl:Class . \
+    FILTER ( isIRI( ?concept ) ) . \
+    ?concept ?relationship ?relatedConcept . \
     ?relationship a owl:AnnotationProperty . \
     ?relatedConcept a owl:Class . \
     FILTER ( isIRI( ?relatedConcept ) ) . \
@@ -337,12 +337,12 @@ associations.all.ncit=SELECT ?conceptCode ?conceptLabel ?relationshipCode ?relat
     FILTER ( isIRI( ?x_concept ) ) . \
     ?x_concept #{preferredNameCode} ?conceptLabel . \
     ?x_concept #{codeCode} ?conceptCode . \
-    ?x_concept ?x_relationship ?relatedConcept . \
+    ?x_concept ?x_relationship ?x_relatedConcept . \
     ?x_relationship a owl:AnnotationProperty . \
-    ?relatedConcept a owl:Class . \
-    FILTER ( isIRI( ?relatedConcept ) ) . \
-    ?relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
-    ?relatedConcept #{codeCode} ?relatedConceptCode . \
+    ?x_relatedConcept a owl:Class . \
+    FILTER ( isIRI( ?x_relatedConcept ) ) . \
+    ?x_relatedConcept #{preferredNameCode} ?relatedConceptLabel . \
+    ?x_relatedConcept #{codeCode} ?relatedConceptCode . \
     ?x_relationship #{preferredNameCode} ?relationshipLabel . \
     ?x_relationship #{codeCode} ?relationshipCode . \
   } \
@@ -419,7 +419,7 @@ inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipL
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
       BIND(?x_concept AS ?conceptCode) \
-	} \
+    } \
     UNION \
     { \
       ?relatedConcept a owl:Class . \
@@ -730,6 +730,26 @@ roles.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationship
   } \
 }
 
+# Reinterpret certain roles as hierarchical
+# NOTE: requires a relationship label
+roles.hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
+{ GRAPH <#{namedGraph}> \
+  { \
+    ?child a owl:Class . \
+    ?child (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+    ?rs a owl:Restriction . \
+    ?rs owl:onProperty ?x_relationship . \
+    ?rs owl:someValuesFrom ?parent . \
+    ?parent a owl:Class . \
+    OPTIONAL { ?child #{preferredNameCode} ?childLabel } . \
+    ?child #{codeCode} ?childCode . \
+    OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
+    ?parent #{codeCode} ?parentCode . \
+    ?x_relationship #{codeCode} ?x_relationshipCode . \
+    FILTER (?x_relationshipCode IN (#{inClause})) . \
+  } \
+}
+
 # ?concept and ?relatedConcept both must have a code
 roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
@@ -776,40 +796,100 @@ roles.all.complex.chebi=SKIP
 roles.all.complex.hgnc=SKIP
 
 # relationship label is bound to "disjointWith"
+# Read in both directions in case not properly inferred
+# And filter bnodes - e.g. "complex" disjointwith expressions like in duo
 disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x a owl:Class . \
-    ?x #{codeCode} "#{conceptCode}" . \
-    ?x owl:disjointWith ?relatedConcept . \
-    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} "#{conceptCode}" . \
+      ?x owl:disjointWith ?relatedConcept . \
+      FILTER (!isBlank(?relatedConcept)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    } \
+    UNION \
+    { \
+      ?x a owl:Class . \
+      FILTER(?x = <#{conceptAbout}>) . \
+      ?x owl:disjointWith ?relatedConcept . \
+      FILTER (!isBlank(?relatedConcept)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?x #{codeCode} "#{conceptCode}" . \
+      ?relatedConcept owl:disjointWith ?x . \
+      FILTER (!isBlank(?relatedConcept)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      FILTER(?x = <#{conceptAbout}>) . \
+      ?relatedConcept owl:disjointWith ?x . \
+      FILTER (!isBlank(?relatedConcept)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    } \
   } \
 }
 
+
+
+
 # relationship label is bound to "disjointWith"
+# Read in both directions in case not properly inferred
+# And filter bnodes - e.g. "complex" disjointwith expressions like in duo
 disjoint.with.batch=SELECT ?conceptCode ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
-	{ \
-	  { \
-	    ?x a owl:Class . \
-	    ?x #{codeCode} ?conceptCode . \
-	    FILTER (?conceptCode IN (#{inClause})) . \
-	    ?x owl:disjointWith ?relatedConcept . \
-	    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-	    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
-	  } \
-	  UNION \
-	  { \
-	    ?x a owl:Class . \
-	    FILTER (?x IN (#{aboutClause})) . \
-	    ?x owl:disjointWith ?relatedConcept . \
-	    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-	    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
-	    FILTER NOT EXISTS { ?x #{codeCode} ?conceptCode } . \
-	    BIND(?x AS ?conceptCode) \
-	  } \
-	 } \
+  { \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
+      ?x owl:disjointWith ?relatedConcept . \
+        FILTER (!isBlank(?relatedConcept)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    } \
+    UNION \
+    { \
+      ?x a owl:Class . \
+      FILTER (?x IN (#{aboutClause})) . \
+      ?x owl:disjointWith ?relatedConcept . \
+      FILTER (!isBlank(?relatedConcept)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      FILTER NOT EXISTS { ?x #{codeCode} ?conceptCode } . \
+      BIND(?x AS ?conceptCode) \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
+      ?relatedConcept owl:disjointWith ?x . \
+      FILTER (!isBlank(?x)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      FILTER (?x IN (#{aboutClause})) . \
+      ?relatedConcept owl:disjointWith ?x . \
+      FILTER (!isBlank(?x)) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      FILTER NOT EXISTS { ?relatedConcept #{codeCode} ?conceptCode } . \
+      BIND(?x AS ?conceptCode) \
+    } \
+  } \
 }
 #ORDER BY ?conceptCode
 
