Change env from AUTH/TLS to MAIL_AUTH/MAIL_TLS

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -31,9 +31,9 @@ spring:
       properties:
         mail:
           smtp:
-            auth: ${AUTH:true}
+            auth: ${MAIL_AUTH:true}
             starttls:
-              enable: ${TLS:true}
+              enable: ${MAIL_TLS:true}
 
 management:
   endpoints:
