Deduplicate par/chd rels

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -732,7 +732,7 @@ roles.all=SELECT ?concept ?conceptCode ?conceptLabel ?relationship ?relationship
 
 # Reinterpret certain roles as hierarchical
 # NOTE: requires a relationship label
-roles.hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
+roles.hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
 { GRAPH <#{namedGraph}> \
   { \
     ?child a owl:Class . \
