CLEANUP: simple renaming of a parameter to satisfy testQueryFields

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1064,7 +1064,7 @@ all.concepts.without.code=SELECT DISTINCT ?concept ?conceptCode ?conceptLabel \
     UNION \
     { \
         ?concept a owl:Class . \
-        ?concept rdfs:subClassOf ?parent . \
+        ?concept rdfs:subClassOf ?x_parent . \
         OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
         FILTER NOT EXISTS { ?concept #{codeCode} ?conceptCode } . \
         FILTER EXISTS { ?concept owl:deprecated "true"^^xsd:boolean } . \
