RDFBROWSER-449 removed test comments and updated TLS to default to True

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -31,9 +31,9 @@ spring:
       properties:
         mail:
           smtp:
-            auth: ${MAIL_AUTH:false}
+            auth: ${MAIL_AUTH:true}
             starttls:
-              enable: ${MAIL_TLS:false}
+              enable: ${MAIL_TLS:true}
 
 management:
   endpoints:
