Updates due to running devreset on Jena

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -515,8 +515,7 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
 { GRAPH <#{namedGraph}> \
 	{ \
 	  { \
-	      ?relatedConcept a owl:Class . \
-	      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+	      ?relatedConcept rdfs:subClassOf ?rs . \
 	      ?rs a owl:Restriction . \
 	      ?rs owl:onProperty ?relationship . \
 	      ?rs owl:someValuesFrom ?x_concept . \
@@ -531,8 +530,38 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
 	  } \
 	  UNION \
 	  { \
-	      ?relatedConcept a owl:Class . \
-	      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+	      ?relatedConcept owl:equivalentClass ?rs . \
+	      ?rs a owl:Restriction . \
+	      ?rs owl:onProperty ?relationship . \
+	      ?rs owl:someValuesFrom ?x_concept . \
+          FILTER ( isIRI( ?x_concept ) ) . \
+	      ?x_concept a owl:Class . \
+	      ?x_concept #{codeCode} ?conceptCode . \
+	      FILTER (?conceptCode IN (#{inClause})) . \
+	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	  } \
+	  UNION \
+	  { \
+	      ?relatedConcept rdfs:subClassOf ?rs . \
+	      ?rs a owl:Restriction . \
+	      ?rs owl:onProperty ?relationship . \
+	      ?rs owl:someValuesFrom ?x_concept . \
+          FILTER ( isIRI( ?x_concept ) ) . \
+	      ?x_concept a owl:Class . \
+	      FILTER (?x_concept IN (#{aboutClause})) . \
+	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	      FILTER NOT EXISTS { ?x_concept #{codeCode} ?x_code } . \
+	      BIND(?x_concept AS ?conceptCode) \
+	  } \
+	  UNION \
+	  { \
+	      ?relatedConcept owl:equivalentClass ?rs . \
 	      ?rs a owl:Restriction . \
 	      ?rs owl:onProperty ?relationship . \
 	      ?rs owl:someValuesFrom ?x_concept . \
@@ -870,10 +899,10 @@ disjoint.with.batch=SELECT ?conceptCode ?relatedConcept ?relatedConceptCode ?rel
     } \
     UNION \
     { \
-      ?relatedConcept a owl:Class . \
       ?x #{codeCode} ?conceptCode . \
       FILTER (?conceptCode IN (#{inClause})) . \
       ?relatedConcept owl:disjointWith ?x . \
+      ?relatedConcept a owl:Class . \
       FILTER (!isBlank(?x)) . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
