--- a/build.gradle
+++ b/build.gradle
@@ -244,3 +244,7 @@ bootJar {
 zipFile.dependsOn = [bootWar, bootJar]
 build.dependsOn = [spotlessCheck, test, bootWar, bootJar, zipFile]
 publishToMavenLocal.dependsOn = [bootWar, bootJar, zipFile]
+
+dependencyLocking {
+  lockAllConfigurations()
+}
