--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,6 +1,9 @@
 name: Trivy Vulnerability Scan
 
 on:
+  push:
+    branches:
+      - pva/EVSRESTAPI-520-github-trivy-action-backend
   pull_request:
     branches:
       - develop
