--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,10 +1,13 @@
 name: Trivy Vulnerability Scan
 
 on:
-  pull_request:
+  push:
     branches:
-      - develop
-      - master
+      - pva/EVSRESTAPI-520-github-trivy-action-backend
+  # pull_request:
+  #   branches:
+  #     - develop
+  #     - master
 
   workflow_dispatch:  # Allows manual runs from the GitHub UI
 
