add API endpoint and test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -111,6 +111,8 @@ springdoc:
     tagsSorter: alpha
     operationsSorter: alpha
     doc-expansion: none
+    syntaxHighlight:
+      activated: false
 
 # Google Recaptcha
 google:
