--- a/build.gradle
+++ b/build.gradle
@@ -99,11 +99,13 @@ dependencies {
   //implementation 'org.apache.opennlp:opennlp-tools:2.2.0'
 
   // Upgrade ecache to use jakarta - https://groups.google.com/g/ehcache-users/c/sKfxWuTpY-U
-  implementation('org.ehcache:ehcache:3.10.8') {
-    capabilities {
-      requireCapability('org.ehcache:ehcache-jakarta')
-    }
-  }
+  // See also: https://stackoverflow.com/questions/75813659/gradle-could-not-find-org-ehcacheehcache-after-upgrading-to-spring-boot-3-0-x
+  implementation "org.ehcache:ehcache:${dependencyManagement.importedProperties['ehcache3.version']}:jakarta"
+  //implementation('org.ehcache:ehcache:3.10.8') {
+  //  capabilities {
+  //    requireCapability('org.ehcache:ehcache-jakarta')
+  //  }
+  //}
 
   //implementation 'commons-io:commons-io:2.14.0'
   //implementation 'commons-cli:commons-cli:1.4'
