--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -18,6 +18,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    # Set up Java 17
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin' # Use Eclipse Temurin distribution for Java
+
     # Install Trivy if not cached
     - name: Install Trivy
       run: |
