start of implementation

--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,10 @@ dependencies {
   //  }
   // }
 
+  // Apache POI for reading .xls and .xlsx files
+  implementation 'org.apache.poi:poi:5.2.3'
+  implementation 'org.apache.poi:poi-ooxml:5.2.3'
+
   //implementation 'commons-io:commons-io:2.14.0'
   //implementation 'commons-cli:commons-cli:1.4'
   implementation 'cglib:cglib:3.3.0'
