--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -77,6 +77,9 @@ nci:
       metricsDir: ${METRICS_DIR:/tmp}
       configBaseUri: ${CONFIG_BASE_URI:https://raw.githubusercontent.com/NCIEVS/evsrestapi-operations/develop/config/metadata}
       uiLicense: ${UI_LICENSE:ui-license}
+      unitTestData: ${UNIT_TEST_DATA:../data/UnitTestData/}
+      pediatricSubsetsXls: ${PEDIATRIC_SUBSETS_XLS:PediatricNeoplasmSubsets.xls}
+      ftpNeoplasmUrl: ${FTP_NEOPLASM_URL:https://evs.nci.nih.gov/ftp1/NCI_Thesaurus/Neoplasm/}
     bulkload:
       conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
       lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
